--- a/src/app/workout/workout.component.html
+++ b/src/app/workout/workout.component.html
@@ -1,1 +1,4 @@
-<app-tables [exercise] = 'this.exercise'></app-tables>
+<!--app-tables [exercise] = 'this.exercise'></app-tables-->
+
+<a routerLink="musclegroups">musclegroups</a>
+<router-outlet></router-outlet>
