--- a/src/app/workout/workout.component.html
+++ b/src/app/workout/workout.component.html
@@ -1,4 +1,5 @@
 <!--app-tables [exercise] = 'this.exercise'></app-tables-->
-
-<a routerLink="musclegroups">musclegroups</a>
+<div class = "siteWrapper">
+<a class = "groupBox" routerLink="musclegroups">musclegroups</a>
+</div>
 <router-outlet></router-outlet>
