--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-menu></app-menu>
-<router-outlet></router-outlet>
-
+<div class="wrapper">
+  <app-menu></app-menu>
+  <router-outlet></router-outlet>
+</div>
