--- a/src/app/workout/tables/current-set/current-set.component.css
+++ b/src/app/workout/tables/current-set/current-set.component.css
@@ -1,23 +1,35 @@
-.setInput{
-  background-color: aqua;
-  height: 50px;
-  width: 150px;
-  font-size: 30px;
-  margin: 50px;
-}
-.setInputButton{
-  border-radius: 20px;
-  background-color: white;
-}
-.setInputButton[type = "submit"]{
-  border-radius: 25px;
-  border: 5px solid black;
-  background-color: white;
-  width: 50px;
-  height: 50px;
-}
-.setInputButton[type = "button"]{
-  border-radius: 20px;
-  background-color: white;
+.entryBar {
+  background: linear-gradient(to bottom, #FFFFFF 0, #7f7d7c 2%, #111110 100%) repeat scroll 0 0 transparent;
+  border: 1px solid #c4c2bf;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 2px #999999;
+  -ms-box-shadow: 0 1px 2px #999999;
+  box-shadow: 0 1px 2px #999999;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  -ms-text-shadow: 0 -1px #099FDF;
+  text-shadow: 0 -1px #099FDF;
+  height: 30px;
+  width: 200px;
+  text-decoration: none;
+  margin: 2px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+.entryText {
+  display: block;
+  text-align: center;
+  margin: auto auto;
+}
+
+.siteWrapper {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+}
