--- a/src/app/workout/tables/tables.component.css
+++ b/src/app/workout/tables/tables.component.css
@@ -1,21 +1,117 @@
 #wrappingContainer {
   display: flex;
+  flex-direction: column;
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: 500px;
+  height: 700px;
+  align-items: center;
+
+}
+.setInputWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.formWrapper{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.setInputButton[type = "submit"] {
+  border-radius: 25px;
+  border: 5px solid black;
+  margin-left: 40px;
+  display: inline-block;
+  color: green;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+}
+.setInputButton[type = "button"] {
+  border-radius: 20px;
+  margin-left: 50px;
+  margin-bottom: auto;
+  margin-top: auto;
+  height: 100%;
+  padding: 0;
+  size: 50px;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+;
+}
+.checkmark {
+  color: green;
+  font-weight: bold;
+}
+.repetitionsX{
+  font-size: 25px;
+  font-weight: bold;
+}
+.weightKg{
+  font-size: 25px;
+  font-weight: bold;
+}
+.setInput {
+
+  text-align: center;
+  width: 50px;
+  font-size: 30px;
+  border: solid 2px black;
+  margin: 3px;
+  vertical-align: middle;
+  font-weight: bold;
+}
+
+form {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  display: flex;
+  height: 100%;
+}
+
+.inputFieldsWrapper {
+
+  margin-bottom: auto;
+  margin-top: auto;
+  display: flex;
+  vertical-align: center;
+  align-items: center;
+}
+
+.submitButtonWrapper {
+
+  width: 50%;
+  margin: auto auto;
+  padding: 0;
+  text-align: left;
+  vertical-align: middle;
+  display: flex;
+  display: table-cell;
+}
+
+
+.title {
+  font-weight: bold;
+}
+.currentAndLastComponent {
+  width: 100%;
+}
+.setDisplayWrapper {
+  display: flex;
+  height: 100%;
 }
 .setContainer {
   display: flex;
-  padding: 0px;
-  margin: 0px;
-  width: 50%;
-  height: 100%;
-  border: solid 2px;
-}
-.siteWrapper {
-  width: 100%;
+  margin: auto auto auto auto;
+  min-width: 300px;
   height: 100%;
 
-  text-align: center;
 }
