--- a/src/app/workout/tables/tables.component.html
+++ b/src/app/workout/tables/tables.component.html
@@ -1,6 +1,6 @@
 <div id="wrappingContainer">
   <div class="setInputWrapper">
-    <p class="title">{{this.exercise.name}}</p>
+    <p class="title">{{this.exercise}}</p>
     <div class="formWrapper">
       <form [formGroup]="myForm2" (ngSubmit)="pushToChild(myForm2)">
         <div class="inputFieldsWrapper">
