design of menu and workout overview as well as new structure for workout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
-  <app-menu></app-menu>
-  <router-outlet></router-outlet>
-
+  <!--app-menu *ngIf="constants.getUsername != null"></app-menu-->
+<div class = "frame">
+  <router-outlet style = "background-color: orange"></router-outlet>
+</div>
