--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,55 +1,51 @@
-.sidenav-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  /*
-  background-image: url("../pictures/background2.jpeg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-   */
-  background-color: #c4c2bf;
+.pageFrame {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  border-bottom: solid black 1px;
+  height: 50px;
 }
 
-.contentContainer {
-  display: inline-block;
-  cursor: pointer;
+.frame {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 50px;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
 }
 
-.bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #333;
-  margin: 6px 0;
-  transition: 0.4s;
+.profile {
+  margin-top: 5px;
+  margin-left: auto;
+  order: 2;
 }
 
-.change .bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+.menuCentered {
+  margin-top: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  order: 1;
 }
+.menuLeft {
 
-.change .bar2 {opacity: 0;}
-
-.change .bar3 {
-  -webkit-transform: rotate(45deg) translate(-8px, -8px);
-  transform: rotate(45deg) translate(-8px, -8px);
-}
-
-.hiddenWorkouts {
-  opacity: 0;
-}
-
-.visibleWorkouts {
-  opacity: 100;
-  color: aqua;
-}
-
-.sidenav {
+  height: 100%;
   width: 200px;
-  background-color: #111110;
-  border-right: #099FDF solid 2px;
-}
+  overflow: hidden;
+  position: relative;
 
+}
+.menuLeft img{
+  position: absolute;
+  top: -28px;
+  left: 0px;
+  height: 90px;
+}
+.menuCentered a {
+
+  margin-right: 8px;
+  margin-left: 8px;
+}
