--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,10 +1,9 @@
-<p>welcome works!</p>
-<div class="flex-container">
+<div class="flex-container" style = "background-color: orange">
   <div class="row">
     <div class="login-wrapper">
       <button type="button" class="large-button" (click)="this.authService.SigninWithGoogle()">
         <span class="large-button__icon">
-          <svg viewBox="0 0 366 372" xmlns="http://www.w3.org/2000/svg">
+          <svg class="google-svg" viewBox="0 0 366 372" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M125.9 10.2c40.2-13.9 85.3-13.6 125.3 1.1 22.2 8.2 42.5 21 59.9 37.1-5.8 6.3-12.1 12.2-18.1 18.3l-34.2 34.2c-11.3-10.8-25.1-19-40.1-23.6-17.6-5.3-36.6-6.1-54.6-2.2-21 4.5-40.5 15.5-55.6 30.9-12.2 12.3-21.4 27.5-27 43.9-20.3-15.8-40.6-31.5-61-47.3 21.5-43 60.1-76.9 105.4-92.4z"
               id="Shape" fill="#EA4335" />
@@ -20,12 +19,15 @@
         </span>
         <span class="large-button__text">Sign in with Google</span>
       </button>
-      <button type="button" class="large-button" (click)="this.authService.SignOut()">
+      <!--
+     <button type="button" class="small-button" (click)="this.authService.SignOut(this.user)">
+
         logout
       </button>
-      <button type="button" class="large-button" (click)="foo()">
+      <button type="button" class="small-button" (click)="foo()">
         foo
       </button>
+      -->
     </div>
   </div>
 </div>
