--- a/src/app/workoutoverview/workout/workout.component.css
+++ b/src/app/workoutoverview/workout/workout.component.css
@@ -27,4 +27,16 @@
   width: 100%;
   height: 100%;
   text-align: center;
+  margin: 0;
+  padding: 0;
+  background-color: wheat;
+}
+
+.innerWrapperDepth2 {
+  width: 100%;
+
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
