--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
 
     <div class="menuCentered">
       <a  [routerLink]="['../management', 11]" routerLinkActive="active" >
-        <img alt="home" src="../../assets/pictures/menuButtons/menuHome2.svg" style="width: 40px; height: 40px">
+        <img alt="home" src="../../assets/pictures/menuButtons/menuHome2.svg" style="max-width: 40px; max-height: 40px">
       </a>
 
 
