--- a/src/app/workoutoverview/workoutoverview.component.html
+++ b/src/app/workoutoverview/workoutoverview.component.html
@@ -1,33 +1,41 @@
 <div class="pageFrame">
   <app-menu #menu></app-menu>
+  <div class="d-flex justify-content-center content-wrapper">
 
-  <div class="content" #content>
-    <div class="frame">
+
+
+
+      <div class="content-div">
+
+
+
+
+
 
       <a class="groupBox" routerLink='workout/new-workout'>
 
         <div class="workoutcreation">
           <p>Create your own workout</p>
-          <img alt="home" src="../../assets/pictures/gym1.png" >
+          <img alt="home" src="../../assets/pictures/gym1.png">
         </div>
       </a>
       <a class="groupBox" routerLink="workout">
         <div class="workoutgroups">
-          <div class = "groupTextHolder">
+          <div class="groupTextHolder">
             <p>Saved Workouts</p>
           </div>
-<div class = "workoutgroupsinnderdivs">
-  <img alt="home" src="../../assets/pictures/pic1.png" >
-</div>
-<div class = "workoutgroupsinnderdivs">
-  <img alt="home" src="../../assets/pictures/pic2.png" >
-</div>
-<div class = "workoutgroupsinnderdivs">
-  <img alt="home" src="../../assets/pictures/pic3.png" >
-</div>
-<div class = "workoutgroupsinnderdivs">
-  <img alt="home" src="../../assets/pictures/pic4.png" >
-</div>
+          <div class="workoutgroupsinnderdivs">
+            <img class = "previewImage" alt="home" src="../../assets/pictures/pic1.png">
+          </div>
+          <div class="workoutgroupsinnderdivs">
+            <img class = "previewImage" alt="home" src="../../assets/pictures/pic2.png">
+          </div>
+          <div class="workoutgroupsinnderdivs">
+            <img class = "previewImage" alt="home" src="../../assets/pictures/pic3.png">
+          </div>
+          <div class="workoutgroupsinnderdivs">
+            <img class = "previewImage" alt="home" src="../../assets/pictures/pic4.png">
+          </div>
         </div>
       </a>
 
