--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,51 +1,138 @@
-.pageFrame {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  justify-content: center;
-  border-bottom: solid black 1px;
-  height: 50px;
+@media (max-width: 767px) {
+  .nav-personal-settings {
+
+    border-bottom: black solid 3px;
+    padding: 3px 0px 3px 0px;
+    margin: 0px;
+    width: 100%;
+    height: 35px;
+
+  }
+
+  .nav-link-menu {
+    margin: 0px 5px 0px 5px;
+    padding: 0px;
+    flex: none;
+  }
+
+  .content-wrapper {
+    height: calc(100% - 35px);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
 }
 
-.frame {
+@media (min-width: 768px) {
+  .nav-personal-settings {
+
+    border-bottom: black solid 1px;
+    padding: 3px 0px 3px 0px;
+    margin: 0px;
+
+    width: 100%;
+    height: 45px;
+
+  }
+
+  .nav-link-menu {
+    margin: 0px 15px 0px 15px;
+    padding: 0px;
+    flex: none;
+
+  }
+
+  .content-wrapper {
+    height: calc(100% - 45px);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+
+
+
+.inner-wrapper {
+  width: 100%;
+  max-width: 1000px;
+}
+
+.nav-div-4 {
+
+}
+
+p {
+  color: red;
+}
+
+.navbar-custom {
+
+}
+
+.link-images {
   margin: 0px;
   padding: 0px;
-  width: 100%;
-  height: 50px;
-  max-width: 1000px;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-}
-
-.profile {
-  margin-top: 5px;
-  margin-left: auto;
-  order: 2;
-}
-
-.menuCentered {
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  order: 1;
-}
-.menuLeft {
-
   height: 100%;
-  width: 200px;
-  overflow: hidden;
-  position: relative;
 
 }
-.menuLeft img{
-  position: absolute;
-  top: -28px;
-  left: 0px;
-  height: 90px;
-}
-.menuCentered a {
 
-  margin-right: 8px;
-  margin-left: 8px;
+.logo-image {
+
 }
+
+.profile-link {
+  max-width: 40px;
+  max-height: 40px;
+  min-width: 30px;
+
+}
+
+.outer-wrapper {
+  margin: 0px;
+  padding: 0px;
+  justify-content: center;
+
+}
+
+.nav-div {
+  margin: 0px;
+  padding: 0px;
+}
+
+.nav-div-2 {
+
+
+
+}
+
+.content-div {
+  height: 100%;
+  overflow: auto;
+  border: black solid 1px;
+}
+
+
+.ndiv-1 {
+}
+
+.ndiv-2 {
+
+}
+
+.ndiv-3 {
+
+}
+
+.ndiv-4 {
+
+}
+
+.ndiv-5 {
+
+}
+
+.ndiv-6 {
+
+}
+
