--- a/src/app/workoutoverview/workoutoverview.component.css
+++ b/src/app/workoutoverview/workoutoverview.component.css
@@ -1,3 +1,33 @@
+@media (max-width: 767px) {
+  .content-wrapper {
+    height: calc(100% - 35px);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
+@media (min-width: 768px) {
+  .content-wrapper {
+    height: calc(100% - 45px);
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+}
+.content-div {
+  padding: 0px;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  overflow-y: auto;
+  border: black solid 1px;
+}
+
+.previewImage {
+  max-height: 100%;
+  max-width: 100%;
+}
+
 .pageFrame {
   height: 100%;
   width: 100%;
