list of saved saved workouts

--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -92,6 +92,15 @@ p {
   margin: 0px;
   padding: 0px;
   justify-content: center;
+  position: fixed;
+  background-color: white;
+
+}
+.outer-wrapper2 {
+  margin: 0px;
+  padding: 0px;
+  justify-content: center;
+  background-color: white;
 
 }
 
