--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
 <div class="container-fluid outer-wrapper">
 
   <nav class="nav-personal-settings d-flex justify-content-center">
@@ -44,5 +43,11 @@
       </div>
 
     </div>
+  </nav>
+</div>
+<!-- non fixed equivalent to the navigation bar. Therefore nothing floats behind the bar -->
+<div class="container-fluid outer-wrapper2">
+  <nav class="nav-personal-settings d-flex justify-content-center">
+
   </nav>
 </div>
