--- a/src/app/workoutoverview/workout/tables/current-set/current-set.component.html
+++ b/src/app/workoutoverview/workout/tables/current-set/current-set.component.html
@@ -1,5 +1,6 @@
-<div class = "siteWrapper">
+<div class = "siteWrapper"> <!--
   <div *ngFor="let set of sets" class="entryBar">
     <p class="entryText">{{set["repetitions"]}} X {{set["weight"]}} Kg</p>
   </div>
+  -->
 </div>
