--- a/src/app/workoutoverview/workout/tables/current-set/current-set.component.css
+++ b/src/app/workoutoverview/workout/tables/current-set/current-set.component.css
@@ -29,7 +29,10 @@
 }
 
 .siteWrapper {
-  margin-top: 30px;
+
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: #F89406;
 }
