--- a/src/app/workoutoverview/workout/tables/last-set/last-set.component.css
+++ b/src/app/workoutoverview/workout/tables/last-set/last-set.component.css
@@ -29,7 +29,9 @@
 }
 
 .siteWrapper {
-  margin-top: 30px;
   display: flex;
   flex-direction: column;
+  background-color: aqua;
+  width: 100%;
+  height: 100%;
 }
