--- a/src/app/workoutoverview/workout/tables/tables.component.css
+++ b/src/app/workoutoverview/workout/tables/tables.component.css
@@ -8,18 +8,21 @@
   align-items: center;
 
 }
+
 .setInputWrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.formWrapper{
+
+.formWrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .setInputButton[type = "submit"] {
   border-radius: 25px;
   border: 5px solid black;
@@ -32,6 +35,7 @@
   font-weight: bold;
   cursor: pointer;
 }
+
 .setInputButton[type = "button"] {
   border-radius: 20px;
   margin-left: 20px;
@@ -43,21 +47,24 @@
   font-size: 30px;
   text-align: center;
   font-weight: bold;
-  cursor: pointer;
-;
+  cursor: pointer;;
 }
+
 .checkmark {
   color: green;
   font-weight: bold;
 }
-.repetitionsX{
+
+.repetitionsX {
   font-size: 25px;
   font-weight: bold;
 }
-.weightKg{
+
+.weightKg {
   font-size: 25px;
   font-weight: bold;
 }
+
 .setInput {
 
   text-align: center;
@@ -101,17 +108,50 @@ form {
 .title {
   font-weight: bold;
 }
+
 .currentAndLastComponent {
   width: 100%;
 }
+
 .setDisplayWrapper {
   display: flex;
+  flex-direction: column;
   height: 100%;
+  width: 100%;
+  max-width: 700px;
+  border: solid black 1px;
 }
-.setContainer {
-  display: flex;
-  margin: auto auto auto auto;
-  min-width: 200px;
-  height: 100%;
 
+.tableContainer {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  flex-direction: row;
+  border: solid red 3px;
+}
+
+.motherBoard {
+  width: 100%;
+  height: 10%;
+  background-color: blueviolet;
+  padding: 0;
+  margin: 0;
+}
+
+.setContainer {
+
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+border: #F89406 solid 2px;
+
+}
+
+.exerciseTitle {
+  width: 100%;
+  height: 10%;
+  background-color: crimson;
+  margin: 0;
+  padding: 0;
 }
