--- a/src/app/workoutoverview/workout/workout.component.css
+++ b/src/app/workoutoverview/workout/workout.component.css
@@ -1,6 +1,6 @@
 @media (max-width: 767px) {
   .content-wrapper {
-    height: calc(100% - 35px);
+
     width: 100%;
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
 }
 @media (min-width: 768px) {
   .content-wrapper {
-    height: calc(100% - 45px);
+
     width: 100%;
     margin: 0;
     padding: 0;
@@ -18,7 +18,7 @@
   width: 100%;
   max-width: 1000px;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .groupBox {
@@ -61,4 +61,47 @@
   height: 100px;
   border: solid black 1px;
   margin: 30px 0 30px 0;
+}
+.collapsed {
+  display: none;
+}
+
+.expanded {
+  display: block;
+}
+.playButton {
+  width:30px;
+  margin-left: 30px;
+  cursor: pointer;
+}
+.centerContent {
+  margin-left: auto;
+  margin-right: auto;
+}
+.phaseContainer {
+  border-left: 3px solid black;
+  border-right: 3px solid black;
+}
+h4 {
+  background-color: #111110;
+  color: white;
+  font-size: 15px;
+  text-align: center;
+}
+.imageLimiter {
+  max-height: 600px;
+  display: block;
+  cursor: pointer;
+}
+.toggleImageStyle {
+  max-height: 20px;
+  float: right;
+  cursor: pointer;
+}
+.expandButtonWrapper {
+  width: 100%;
+  height: 20px;
+}
+.workoutsContainer {
+  padding-bottom: 100px;
 }
