finished data transmissian to player

--- a/src/app/workoutoverview/workout/tables/current-set/current-set.component.css
+++ b/src/app/workoutoverview/workout/tables/current-set/current-set.component.css
@@ -34,5 +34,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: #F89406;
+  border: solid black 1px;
+  overflow: auto;
 }
