--- a/src/app/workoutoverview/workout/workout.component.html
+++ b/src/app/workoutoverview/workout/workout.component.html
@@ -12,7 +12,7 @@
     </div>
 
 
-    <div *ngFor="let set of workouts" class="workoutsContainer">
+    <div *ngFor="let set of workouts; index as i" class="workoutsContainer">
       <div class = "centerContent" style="width: 400px; border: solid 1px black">
         <h2 class="centerContent"
            style="text-align: center;">{{set["name"]}}</h2>
@@ -26,7 +26,7 @@
              class="centerContent">
           <div *ngFor="let days of set.days">
             <h3 style = "text-align: center; margin-top: 30px" class = "centerContent">
-            {{days.name}} <img routerLink="tables/:1" class = "playButton" alt="play" src="../../assets/pictures/menuButtons/square-play-button.svg">
+            {{days.name}} <img routerLink="tables/{{i}}/{{days.id}}" class = "playButton" alt="play" src="../../assets/pictures/menuButtons/square-play-button.svg">
             </h3>
 
             <div class="phaseContainer" *ngFor="let phase of days.phases">
