--- a/src/app/workoutoverview/workout/tables/last-set/last-set.component.css
+++ b/src/app/workoutoverview/workout/tables/last-set/last-set.component.css
@@ -31,7 +31,8 @@
 .siteWrapper {
   display: flex;
   flex-direction: column;
-  background-color: aqua;
   width: 100%;
   height: 100%;
+  border: solid black 1px;
+  overflow: auto;
 }
