--- a/src/app/workoutoverview/workout/tables/tables.component.css
+++ b/src/app/workoutoverview/workout/tables/tables.component.css
@@ -1,10 +1,33 @@
+.content-wrapper {
+
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.content-div {
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  overflow: hidden;
+  border: solid black 1px;
+}
+
+.filter-div {
+  width: 100%;
+  height: 15%;
+  border: solid black 1px;
+  margin: 30px 0 30px 0;
+}
+
 #wrappingContainer {
   display: flex;
   flex-direction: column;
   padding: 0px;
   margin: 0px;
   width: 100%;
-  height: 700px;
+  height: calc(100% - 45px);
   align-items: center;
 
 }
@@ -116,9 +139,8 @@ form {
 .setDisplayWrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(85% - 60px);
   width: 100%;
-  max-width: 700px;
   border: solid black 1px;
 }
 
@@ -127,13 +149,11 @@ form {
   height: 80%;
   display: flex;
   flex-direction: row;
-  border: solid red 3px;
 }
 
 .motherBoard {
   width: 100%;
   height: 10%;
-  background-color: blueviolet;
   padding: 0;
   margin: 0;
 }
@@ -144,14 +164,12 @@ form {
   width: 100%;
   margin: 0;
   padding: 0;
-border: #F89406 solid 2px;
 
 }
 
 .exerciseTitle {
   width: 100%;
   height: 10%;
-  background-color: crimson;
   margin: 0;
   padding: 0;
 }
